--- a/html5-and-css3-com-treasure-porth/index.html
+++ b/html5-and-css3-com-treasure-porth/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Allen Halsay's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
@@ -22,7 +22,7 @@
   </div>
 
   <header>
-    <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
+    <img src="https://placeimg.com/400/400/people" alt="Drawing of Jane Smith" class="profile-image">
     <h1 class="tag name">Hello, I’m Allen.</h1>
     <p class="tag location">My home is Bacabal, Maranhão.</p>
   </header>
@@ -35,6 +35,8 @@
         fantastic looking websites.</p>
       <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my
         skills.</p>
+      <img src="https://placeimg.com/400/400/people" alt="People" class="profile-image">
+      <p><a href="#top">This is this third paragraph</a></p>
       <ul>
         <li>To learn more, <a href="resume.html">view my resume.</a></li>
       </ul>
@@ -56,7 +58,7 @@
   </main>
   <footer>
     <ul>
-      <li><a href="#" class="social twitter">Twitter</a></li>
+      <li><a href="http://www.twitter.com/allenhalsay007" target="_blank" class="social twitter">Twitter</a></li>
       <li><a href="#" class="social linkedin">LinkedIn</a></li>
       <li><a href="#" class="social github">Github</a></li>
     </ul>
