--- a/html5-and-css3-com-treasure-porth/index.html
+++ b/html5-and-css3-com-treasure-porth/index.html
@@ -22,14 +22,14 @@
   </div>
 
   <header>
-    <img src="https://placeimg.com/400/400/people" alt="Drawing of Jane Smith" class="profile-image">
+    <img src="images/allen.jpg" alt="Drawing of Jane Smith" class="profile-image">
     <h1 class="tag name">Hello, I’m Allen.</h1>
     <p class="tag location">My home is Bacabal, Maranhão.</p>
   </header>
 
   <main class="flex">
     <div class="card">
-      <h2>Background</h2>
+      <h2 class="card-title">Background</h2>
       <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and
         have worked in lots of different jobs. I’m excited to bring my life experience to the process of building
         fantastic looking websites.</p>
@@ -40,10 +40,11 @@
       <ul>
         <li>To learn more, <a href="resume.html">view my resume.</a></li>
       </ul>
+      <h3>New Subscription</h3>
     </div>
 
     <div class="card">
-      <h2>Goals</h2>
+      <h2 class="card-title">Goals</h2>
       <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
       <ul class="skills">
         <li>HTML</li>
