--- a/html5-and-css3-com-allen-halsay/index.html
+++ b/html5-and-css3-com-allen-halsay/index.html
@@ -7,16 +7,40 @@
 </head>
 
 <body>
+    <section>
+        <h2>Demonstrating the Box Model</h2>
+        <nav class="navigation">
+            <ul>
+                <li>Home</li>
+                <li>Empresa</li>
+                <li>Fale Conosco</li>
+            </ul>
+        </nav>
+        <p class="one-paragraph">The CSS box model is essentially a box that wraps around every HTML element. It
+            consists of: borders,
+            padding,
+            margins, and the actual content.</p>
+    </section>
+    <section>
+        <div>This text is the content of the box. We have added a 50px padding, 20px margin and a 15px green border. Ut
+            enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+            aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+    </section>
+    <section>
+        <figure>
+            <img src="assets/allen.jpg" alt="Foto de Allen Halsay">
+            <figcaption>Front-End Developer</figcaption>
+        </figure>
 
-    <h2>Demonstrating the Box Model</h2>
+        <p id="allen">The CSS box model is essentially a box that wraps around every HTML element. It consists of:
+            borders,
+            padding,
+            margins, and the actual content.</p>
+    </section>
 
-    <p>The CSS box model is essentially a box that wraps around every HTML element. It consists of: borders, padding,
-        margins, and the actual content.</p>
-
-    <div>This text is the content of the box. We have added a 50px padding, 20px margin and a 15px green border. Ut enim
-        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 
 </body>
 
