--- a/html5-and-css3-com-allen-halsay/index.html
+++ b/html5-and-css3-com-allen-halsay/index.html
@@ -8,26 +8,41 @@
 
 <body>
     <section>
-        <h2>Demonstrating the Box Model</h2>
-        <nav class="navigation">
-            <ul>
-                <li>Home</li>
-                <li>Empresa</li>
-                <li>Fale Conosco</li>
-            </ul>
-        </nav>
+        <div class="section-main">
+            <div class="header-main">
+                <h2 class="title">Demonstrating the Box Model</h2>
+                <div class="nav-header">
+                    <nav class="navigation">
+                        <ul>
+                            <li>Home</li>
+                            <li>Empresa</li>
+                            <li>Cursos</li>
+                            <li>Fale Conosco</li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
         <p class="one-paragraph">The CSS box model is essentially a box that wraps around every HTML element. It
-            consists of: borders,
-            padding,
-            margins, and the actual content.</p>
+            consists of: borders, margins, and the actual content.</p>
     </section>
     <section>
-        <div>This text is the content of the box. We have added a 50px padding, 20px margin and a 15px green border. Ut
-            enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute
-            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+        <div class="container-section">
+            <div class="div-section">
+                <p>This text is the content of the box. We have added a 50px padding, 20px margin and a
+                    15px green border. Utenim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex
+                    ea
+                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit
+                    anim id est laborum.</p>
+            </div>
+            <div class="float-left">
+                <img class="img-car" src="assets/car.jpg" alt="Um carro amarelo" width="250px">
+            </div>
+        </div>
     </section>
     <section>
         <figure>
